--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h1>Olá Mundo</h1>
-
-<button class="btn btn-primary btn-lg" >
-  Clique Aqui
-  <i class="pi pi-info-circle" ></i>
-</button>
+<router-outlet></router-outlet>
