--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8 col-lg-5 mx-auto">
-      <div class="card border border-dark rounded-4 my-5 p-3">
+      <div class="card border border-ligth rounded-4 my-5 p-3">
         <div class="card-body">
-          <h1 class="card-title text-center text-black-50 fw-bold" style="margin-bottom: 8%;">Sistema de Requisições</h1>
+          <h1 class="card-title text-center text-black fw-bold" style="margin-bottom: 8%;">Sistema de Requisições</h1>
 
           <form class="col-md-8 mx-auto" [formGroup]="form" (ngSubmit)="login()">
             <div class="form-group mt-3">
@@ -15,7 +15,7 @@
                 placeholder="Digite seu e-mail">
             </div>
 
-            <div class="form-group mt-3">
+            <div class="form-group my-3">
               <label for="senha" class="form-label fs-6">Senha:</label>
               <input
                 formControlName="senha"
@@ -24,8 +24,12 @@
                 placeholder="Digite sua senha">
             </div>
 
-            <div class="d-grid mx-5 gap-2 mt-4">
-              <button type="submit" class="btn btn-dark">
+            <div class="text-center">
+              <a role="button" class="text-black fw-lighter text-decoration-none" (click)="abrirModalRecuperacao(content)">Esqueceu sua senha?</a>
+            </div>
+
+            <div class="d-grid mx-5 gap-2 mt-5">
+              <button type="submit" class="btn btn-secondary">
                 <i class="pi pi-sign-in me-1"></i>Login</button>
             </div>
           </form>
@@ -34,3 +38,28 @@
     </div>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Recuperação de Senha</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('fechar')"></button>
+  </div>
+    <form [formGroup]="formRecuperacao" (ngSubmit)="modal.close('enviar')">
+      <div class="modal-body">
+        <div class="alert alert-primary" role="alert">
+        Você receberá as instruções para recuperação de senha no e-mail informado.
+        </div>
+        <div class="form-group mb-3">
+          <label for="emailRecuperacao" class="form-label">Endereço de e-mail:</label>
+          <input formControlName="emailRecuperacao"
+            class="form-control"
+            type="email"
+            placeholder="Digite o endereço de e-mail">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-dark col-md-3">Enviar</button>
+        <button type="button" class="btn btn-outline-dark col-md-3" (click)="modal.dismiss('fechar')">Cancelar</button>
+      </div>
+    </form>
+</ng-template>
