--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,13 @@
 }
 
 .navbar {
-  box-shadow: rgba(70, 4, 86, 0.515) 0px 3px 8px;
+  box-shadow: rgba(70, 4, 86, 0.566) 0px 3px 8px;
 }
 
 .nav-link:hover{
   color: rgba(255, 255, 255, 0.696) !important;
 }
 
+.border {
+  box-shadow: rgba(70, 4, 86, 0.566) 0px 3px 8px;
+}
