--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <div class="logo">
-      <a class="nav-item ms-auto d-none d-lg-block" routerLink="/">
+    <div class="logo d-flex">
+      <a class="nav-item justify-content-center d-lg-block" routerLink="/">
         <img style="margin-right: 50px;" src="../../assets/logo-academia.svg" alt="" width="45" height="39">
       </a>
     </div>
@@ -23,7 +23,7 @@
             <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamento3</a>
           </li>
 
-          <div class="ms-0 ms-md-auto">
+          <div class="ms-0 ms-lg-auto">
             <a style="margin-top: 3px;" role="button" class="btn btn-outline-light px-5" (click)="sair();">Sair</a>
           </div>
         </ul>
