--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,15 +12,11 @@
       <div class="links w-100 text-center" *ngIf="usuarioLogado | async">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamento1</a>
+            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamentos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamento2</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamento3</a>
+            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/equipamentos">Equipamentos</a>
           </li>
 
           <div class="ms-0 ms-lg-auto">
