--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -14,7 +14,8 @@
             </p>
 
             <div class="d-grid d-lg-flex text-center gap-2 mt-5">
-              <button class="btn btn-secondary btn-lg mt-md-auto" type="button">Gerenciar Departamentos</button>
+              <button class="btn btn-secondary btn-lg mt-md-auto" routerLink="/departamentos" type="button">Gerenciar Departamentos</button>
+              <button class="btn btn-secondary btn-lg mt-md-auto" routerLink="/equipamentos" type="button">Gerenciar Equipamentos</button>
               <button class="btn btn-outline-secondary btn-lg mt-lg-auto" type="button" (click)="sair()">Sair</button>
             </div>
 
