Validação de telefone e Notificações adicionadas

--- a/src/app/departamentos/departamento.component.html
+++ b/src/app/departamentos/departamento.component.html
@@ -79,6 +79,7 @@
           <input formControlName="telefone"
             class="form-control"
             type="text"
+            mask="(00) 0000-0000"
             placeholder="Digite o telefone do departamento">
         </div>
       </div>
