--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,6 +11,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" [ngbCollapse]="!estaColapsada">
       <div class="links w-100 text-center" *ngIf="usuarioLogado | async">
         <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/painel">Home</a>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link active fw-semibold" aria-current="page" routerLink="/departamentos">Departamentos</a>
           </li>
