--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,6 +24,10 @@
             <a class="nav-link active fw-semibold" aria-current="page" routerLink="/equipamentos">Equipamentos</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link active fw-semibold" aria-current="page" routerLink="/funcionarios">Funcionários</a>
+          </li>
+
           <div class="ms-0 ms-lg-auto">
             <a style="margin-top: 3px;" role="button" class="btn btn-outline-light px-5" (click)="sair();">Sair</a>
           </div>
