--- a/src/app/funcionarios/funcionario.component.html
+++ b/src/app/funcionarios/funcionario.component.html
@@ -69,63 +69,73 @@
   </div>
     <form [formGroup]="form" (ngSubmit)="modal.close('gravar')">
       <div class="modal-body">
+        <div formGroupName="funcionario">
 
-        <div class="form-group mb-3 position-relative">
-          <label for="nome" class="form-label">Nome:</label>
-          <input formControlName="nome"
-            [ngClass]="(nome?.touched && nome?.invalid) ? 'is-invalid' : ''"
-            class="form-control"
-            type="text"
-            placeholder="Digite o nome do funcionário">
-            <div class="invalid-tooltip" *ngIf="email?.touched && email?.invalid">
-              <span *ngIf="nome?.errors?.['required']" >O nome precisa ser preenchido</span>
-              <span *ngIf="nome?.errors?.['minlength']" >O nome precisa ter no mínimo 3 letras</span>
+          <div class="form-group mb-3 position-relative">
+            <label for="nome" class="form-label">Nome:</label>
+            <input formControlName="nome"
+              [ngClass]="(nome?.touched && nome?.invalid) ? 'is-invalid' : ''"
+              class="form-control"
+              type="text"
+              placeholder="Digite o nome do funcionário">
+              <div class="invalid-tooltip" *ngIf="nome?.touched && nome?.invalid">
+                <span *ngIf="nome?.errors?.['required']" >O nome precisa ser preenchido</span>
+                <span *ngIf="nome?.errors?.['minlength']" >O nome precisa ter no mínimo 3 letras</span>
+              </div>
+          </div>
+
+          <div class="form-group mb-3 position-relative">
+            <label for="email" class="form-label">E-mail:</label>
+            <input formControlName="email"
+              [ngClass]="(email?.touched && email?.invalid) ? 'is-invalid' : ''"
+              class="form-control"
+              type="email"
+              placeholder="Digite o e-mail do funcionário">
+              <div class="invalid-tooltip" *ngIf="email?.touched && email?.invalid">
+                <span *ngIf="email?.errors?.['required']" >O e-mail precisa ser preenchido</span>
+                <span *ngIf="email?.errors?.['email']" >O e-mail precisa ter um formato válido</span>
+              </div>
+          </div>
+
+          <div class="form-group mb-3 position-relative">
+            <label for="funcao" class="form-label">Função:</label>
+            <input formControlName="funcao"
+              [ngClass]="(funcao?.touched && funcao?.invalid) ? 'is-invalid' : ''"
+              class="form-control"
+              type="text"
+              placeholder="Digite a função do funcionário">
+              <div class="invalid-tooltip" *ngIf="funcao?.touched && funcao?.invalid">
+                <span *ngIf="funcao?.errors?.['required']" >A função precisa ser preenchida</span>
+                <span *ngIf="funcao?.errors?.['minlength']" >A função precisa ter no mínimo 3 caracteres</span>
+              </div>
+          </div>
+
+          <div class="form-group mb-3 position-relative">
+            <label for="departamentoId" class="form-label">Departamento:</label>
+            <ng-select formControlName="departamentoId"
+              [ngClass]="(departamentoId?.touched && departamentoId?.invalid) ? 'is-invalid' : ''"
+              [clearable]="false"
+              [searchable]="false">
+              <ng-option
+                *ngFor="let departamento of (departamentos$ | async)"
+                [value]="departamento.id">
+                {{ departamento.nome }}
+              </ng-option>
+            </ng-select>
+            <div class="invalid-tooltip" *ngIf="departamentoId?.touched && departamentoId?.invalid">
+              <span *ngIf="departamentoId?.errors?.['required']" >O departamento precisa ser selecionado</span>
             </div>
-        </div>
-
-        <div class="form-group mb-3 position-relative">
-          <label for="email" class="form-label">E-mail:</label>
-          <input formControlName="email"
-            [ngClass]="(email?.touched && email?.invalid) ? 'is-invalid' : ''"
-            class="form-control"
-            type="email"
-            placeholder="Digite o e-mail do funcionário">
-            <div class="invalid-tooltip" *ngIf="email?.touched && email?.invalid">
-              <span *ngIf="nome?.errors?.['required']" >O e-mail precisa ser preenchido</span>
-              <span *ngIf="nome?.errors?.['email']" >O e-mail precisa ter um formato válido</span>
-            </div>
-        </div>
-
-        <div class="form-group mb-3 position-relative">
-          <label for="funcao" class="form-label">Função:</label>
-          <input formControlName="funcao"
-            [ngClass]="(funcao?.touched && funcao?.invalid) ? 'is-invalid' : ''"
-            class="form-control"
-            type="text"
-            placeholder="Digite a função do funcionário">
-            <div class="invalid-tooltip" *ngIf="funcao?.touched && funcao?.invalid">
-              <span *ngIf="funcao?.errors?.['required']" >A função precisa ser preenchida</span>
-              <span *ngIf="funcao?.errors?.['minlength']" >A função precisa ter no mínimo 3 caracteres</span>
-            </div>
-        </div>
-
-        <div class="form-group mb-3 position-relative">
-          <label for="departamentoId" class="form-label">Departamento:</label>
-          <ng-select formControlName="departamentoId"
-            [ngClass]="(departamentoId?.touched && departamentoId?.invalid) ? 'is-invalid' : ''"
-            [clearable]="false"
-            [searchable]="false">
-            <ng-option
-              *ngFor="let departamento of (departamentos$ | async)"
-              [value]="departamento.id">
-              {{ departamento.nome }}
-            </ng-option>
-          </ng-select>
-          <div class="invalid-tooltip" *ngIf="departamentoId?.touched && departamentoId?.invalid">
-            <span *ngIf="departamentoId?.errors?.['required']" >O departamento precisa ser selecionado</span>
           </div>
         </div>
 
+        <div class="form-group mb-3" *ngIf="!this.id?.value">
+          <label for="senha" class="form-label">Senha:</label>
+          <input formControlName="senha"
+            [ngClass]="(senha?.touched && senha?.invalid) ? 'is-invalid' : ''"
+            class="form-control"
+            type="password"
+            placeholder="Digite a senha do funcionário">
+        </div>
 
       </div>
       <div class="modal-footer">
