--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -6,7 +6,7 @@
           <div class="container">
 
             <h1 class="display-6 fw-bold">
-              Olá, <span class="text-secondary"> {{ emailUsuario }} </span>!
+              Olá, <span class="text-secondary"> {{ emailUsuario }}</span>!
             </h1>
 
             <p class="fs-4 mt-4">
@@ -17,6 +17,7 @@
               <button class="btn btn-secondary btn-lg  mt-md-auto" routerLink="/departamentos" type="button">Departamentos</button>
               <button class="btn btn-secondary btn-lg mt-md-auto" routerLink="/equipamentos" type="button">Equipamentos</button>
               <button class="btn btn-secondary btn-lg mt-md-auto" routerLink="/funcionarios" type="button">Funcionários</button>
+              <button class="btn btn-secondary btn-lg mt-md-auto" routerLink="/requisicoes" type="button">Requisições</button>
               <button class="btn btn-outline-secondary btn-lg mt-lg-auto" type="button" (click)="sair()">Sair</button>
             </div>
 
