--- a/src/app/requisicoes/requisicoes-departamento/requisicoes-departamento.component.html
+++ b/src/app/requisicoes/requisicoes-departamento/requisicoes-departamento.component.html
@@ -27,7 +27,7 @@
                     </tr>
                   </thead>
                   <tbody class="text-center">
-                    <tr *ngFor="let requisicao of (requisicoes$ | async)">
+                    <tr *ngFor="let requisicao of ((requisicoes$ | async) | requisicoesDepartamento: funcionarioLogado.departamentoId)">
                       <td class="align-middle">{{ requisicao.dataAbertura.toDate() | date: "dd/MM/yyyy HH:mm" }}</td>
                       <td class="align-middle">{{ requisicao.departamento?.nome }}</td>
                       <td class="align-middle">{{ requisicao.descricao }}</td>
@@ -99,8 +99,8 @@
         </div>
 
         <div class="form-group mb-3 position-relative">
-          <label for="descricaoMovimentacao" class="form-label">Descrição da Movimentação:</label>
-          <textarea formControlName="descricaoMovimentacao"
+          <label for="descricao" class="form-label">Descrição da Movimentação:</label>
+          <textarea formControlName="descricao"
             class="form-control"
             type="text"
             placeholder="Digite a descrição da movimentação">
