--- a/src/app/requisicoes/requisicoes-funcionario/requisicoes-funcionario.component.html
+++ b/src/app/requisicoes/requisicoes-funcionario/requisicoes-funcionario.component.html
@@ -31,7 +31,7 @@
                   </tr>
                 </thead>
                 <tbody class="text-center">
-                  <tr *ngFor="let requisicao of (requisicoes$ | async)">
+                  <tr *ngFor="let requisicao of (requisicoes$ | async | requisicoesFuncionario: funcionarioLogado.id)">
                     <td class="align-middle">{{ requisicao.dataAbertura.toDate() | date: "dd/MM/yyyy HH:mm"}}</td>
                     <td class="align-middle">{{ requisicao.departamento?.nome }}</td>
                     <td class="align-middle">{{ requisicao.descricao }}</td>
